# scPTR

./: .gitignore  ABSTRACT.md  LICENSE  README.md  RESULTS.md  abstract.tex  compute_real_figure_data.py  generate_figures.py  generate_presentation_figures.py  pyproject.toml
analyses/: _common.py  download_eclip.py  make_figures.py  make_figures_claims.py  make_labelled_paper_figures.py  make_talk_real_figures.py  run_all.py  run_comprehensive_fixes.py  run_comprehensive_improvements.py  run_cross_platform.py  run_deep_advantages.py  run_deep_benchmark.py  run_deep_benchmark.sh  run_deep_benchmark_v2.py  run_dentate_gyrus.py  run_final_fixes.py  run_gaps.py  run_halflife_ablation.py  run_mirna_analysis.py  run_perturbation_validation.py  run_precedence.py  run_remaining_validation.py  run_scifate.py  run_summary.py  run_tier1_fixes.py  run_tier2_validation.py  run_tier3.py  run_velocity_comparison.py  run_weakness_fixes.py  run_weakness_improvements.py  run_wrapup_analysis.py
docs/: FIGURES.md  FIGURE_REPRODUCTION.md  TALK_REAL_FIGURES.md
neurips2026/: checklist.tex  main.tex  neurips_2026.sty  refs.bib
presentations/: main.tex  scPTR talk.pptx
real_figure_data/: epsilon_states.npz  halflife_scatter.npz  invisibility_scores.csv  mirna_enrichment_documented.json  pt_velocity_umap.npz  rbp_network.json  temporal_precedence.npz
supplementary/: build.sh
tests/: conftest.py  test_benchmark.py  test_beta.py  test_beta_groupby.py  test_datasets.py  test_deep_data.py  test_deep_distributions.py  test_deep_guide.py  test_deep_model.py  test_deep_synthetic.py  (+10 more)
(+127 files in other folders)
