[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scptr"
version = "0.1.0"
description = "Single-cell post-transcriptional regulation analysis"
requires-python = ">=3.9"
dependencies = [
    "anndata>=0.8",
    "scanpy>=1.9",
    "numpy>=1.21",
    "scipy>=1.7",
    "numba>=0.55",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "seaborn>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "scikit-learn>=1.0",
]
datasets = [
    "pooch>=1.6",
]
deep = [
    "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scptr.tools" = ["data/*.csv"]
"scptr.datasets" = ["data/*.csv"]
"scptr.benchmark" = ["data/*.txt"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
